category item and sub category
